--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
   "dependencies": {
     "@apollo/client": "^3.6.5",
     "apollo-server-micro": "^3.8.1",
-    "bcryptjs": "^2.4.3",
-    "graphql": "^16.5.0",
-    "jsonwebtoken": "^8.5.1",
-    "micro": "^9.3.4",
-    "mongoose": "^6.3.4",
+    "axios": "0.27.2",
+    "bcryptjs": "2.4.3",
+    "graphql": "16.5.0",
+    "jsonwebtoken": "8.5.1",
+    "luxon": "2.4.0",
+    "micro": "9.3.4",
+    "mongoose": "6.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "validator": "^13.7.0"
+    "validator": "13.7.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.1.6",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
